# sprind-next-gen-signing-service

./: .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  NOTES.md
.github/workflows/: build_and_deploy_dev.yml  build_and_upload_docker_int.yml  rust_checks.yml  rust_clippy_check.yml  rust_format_check.yml  rust_test_report.yml
jsonld/ns/did/: v1
jsonld/security/data-integrity/: v1  v2
jsonld/security/jwk/: v1
jsonld/security/multikey/: v1
manifests/dev/: deployment.yaml  ingress.yaml  service.yaml
next-gen-signatures/: Cargo.toml
next-gen-signatures/circom/bls12381/: larger_than_public_64.r1cs  larger_than_public_64.wasm  less_than_public_64.r1cs
next-gen-signatures/circom/circuits/: comparators.circom
next-gen-signatures/jsonld/2018/credentials/: v1
next-gen-signatures/src/: common.rs  crypto.rs  encoding.rs  lib.rs  macros.rs
next-gen-signatures/src/crypto/: bbs.rs  common.rs  fips204.rs  mod.rs  zkp.rs
next-gen-signatures/src/crypto/zkp/: circuits.rs  common.rs  issuance.rs  mod.rs  presentation.rs  types.rs  verification.rs
next-gen-signatures/src/rdf/: mod.rs
next-gen-signatures/tests/: device-binding-test.rs  device-binding.rs  jsonld-sample.rs  jsonld-zkp-flow.rs  jsonld-zkp-using-crate.rs  jsonld-zkp.rs  jsonld_zkp_flow.rs  rdf-query.rs  rdf-selective-disclosure.rs  rdf-to-jsonld.rs  rdf-zkp.rs  sample-test.rs  w3-vc-di-bbs.rs  zkp-sample.rs  zkp.rs
next-gen-signing-service/: Cargo.toml
next-gen-signing-service/examples/zkp/: flow.http  gen-vptoken-for-integration-test.http
next-gen-signing-service/src/: main.rs
next-gen-signing-service/src/models/: common.rs  mod.rs  zkp.rs
next-gen-signing-service/src/routes/: bbs_plus.rs  fips204.rs  mod.rs  zkp.rs
rdf-util/: Cargo.toml
rdf-util/src/: blanks.rs  eq.rs  index.rs  json.rs  lib.rs  multigraph.rs  parse.rs  test.rs  value.rs
rdf-util/tests/: arrays.rs  example.rs  none-id.rs  parse-hint.rs
zkp-util/: Cargo.toml
zkp-util/circom/bls12381/: less_than_public_64.wasm
zkp-util/circom/circuits/: larger_than_public_64.circom
zkp-util/src/: circuits.rs  constants.rs  device_binding.rs  keypair.rs  lib.rs  main.rs
zkp-util/src/vc/: index.rs  issuance.rs  mod.rs  presentation.rs  requirements.rs  utils.rs  verification.rs
zkp-util/tests/: b64-test.rs  claim-based.rs  device-binding-with-predicates.rs  device-binding.rs  predicates.rs  selective-disclosure.rs
