[workspace]
resolver = "2"
members = ["rdf-util", "zkp-util"]
default-members = ["rdf-util", "zkp-util"]

[workspace.dependencies]
anyhow = { version = "1.0.97", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [
    "curve",
] }
ark-ff = { version = "^0.4.1", default-features = false }
ark-secp256r1 = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
base64 = "0.22.1"
bbs_plus = { version = "0.24.0", default-features = false, features = [
    "parallel",
] }
blake2 = { version = "0.10", default-features = false }
multibase = { version = "0.9.1" }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.132" }

# ark-ff = { version = "^0.4.1", default-features = false }
# ark-poly = { version = "^0.4.1", default-features = false }
# ark-serialize = { version = "^0.4.1", default-features = false, features = [
#     "derive",
# ] }
# ark-relations = { version = "^0.4.0", default-features = false }
# ark-r1cs-std = { version = "^0.4.0", default-features = false }
# ark-groth16 = { version = "^0.4.0", default-features = false }
# rayon = { version = "1" }
# digest = { version = "0.10", default-features = false, features = ["alloc"] }
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# serde_with = { version = "1.10.0", default-features = false, features = [
#     "macros",
# ] }
# zeroize = { version = "1.7.0", features = ["derive"] }
# itertools = "0.12.1"
# sha3 = { version = "0.10.6", default-features = false }
