[workspace]
resolver = "2"
members = ["rdf-util", "zkp-util", "next-gen-signatures"]
default-members = ["rdf-util", "zkp-util", "next-gen-signatures"]

[workspace.dependencies]
anyhow = { version = "1.0.97", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [
    "curve",
] }
ark-ec = { version = "^0.4.1", default-features = false }
ark-ff = { version = "^0.4.1", default-features = false }
ark-secp256r1 = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.1", default-features = false, features = [
    "derive",
] }
ark-std = { version = "^0.4.0", default-features = false }
base64 = "0.22.1"
bbs_plus = { version = "0.24.0", default-features = false, features = [
    "parallel",
] }
blake2 = { version = "0.10", default-features = false }
dock_crypto_utils = { version = "0.22.0", default-features = false }
multibase = { version = "0.9.1" }
num-bigint = { version = "0.4.6" }
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.132" }
