[package]
name = "next-gen-signatures"
version = "0.1.2"
edition = "2021"

[features]
rocket = ["dep:rocket"]
all-algos = ["fips204", "bbs"]
fips204 = ["dep:fips204"]
bbs = ["dep:ark-bls12-381", "dep:ark-ec", "dep:bbs_plus", "dep:blake2"]
zkp = []

[dependencies]
anyhow = "1.0.89"
ark-bls12-381 = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }
base64 = "0.22.1"
bbs_plus = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
dock_crypto_utils = { workspace = true }
fips204 = { version = "0.2.2", optional = true }
num-bigint = { workspace = true }
paste = "1.0.15"
rand_core = { workspace = true }
rocket = { version = "0.5.1", optional = true }
schnorr_pok = { version = "0.20.0", optional = true }
zkp-util = { path = "../zkp-util" }

[target.'cfg(any(target_os = "android"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
