[package]
name = "next-gen-signing-service"
version = "0.0.4"
edition = "2021"

[dependencies]
next-gen-signatures = { path = "../next-gen-signatures", features = [
    "all-algos",
] }
paste = "1.0.15"
rocket = { version = "0.5.1", features = ["json"] }
rocket-errors = "0.1.0"
serde_urlencoded = "0.7.1"
