[package]
name = "next-gen-signing-service"
version = "0.1.2"
edition = "2021"

[dependencies]
next-gen-signatures = { path = "../next-gen-signatures", features = [
    "all-algos",
    "rocket",
] }
paste = "1.0.15"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
rocket-errors = "0.1.0"
serde_json = "1.0.132"
serde_urlencoded = "0.7.1"
