[package]
name = "next-gen-signing-service"
version = "0.1.15"
edition = "2021"

[dependencies]
next-gen-signatures = { path = "../next-gen-signatures", features = ["all"] }
paste = "1.0.15"
rand_core = { workspace = true }
rocket = { workspace = true }
rocket-errors = "0.1.0"
serde_json = "1.0.132"
serde_urlencoded = "0.7.1"

[dev-dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
zkp-util = { path = "../zkp-util" }
